--- a/package.json
+++ b/package.json
@@ -9,35 +9,47 @@
   "scripts": {
     "build": "gulp bundle",
     "clean": "gulp clean",
-    "test": "gulp test",
-    "get-pnp-modern-search": "rm -rf src/pnp-modern-search-parts src/pnp-modern-search-extensibility && git clone --depth 1 https://github.com/microsoft-search/pnp-modern-search.git temp-pnp && mv temp-pnp/search-parts src/pnp-modern-search-parts && mv temp-pnp/search-extensibility src/pnp-modern-search-extensibility && rm -rf temp-pnp"
+    "test": "gulp test"
   },
   "dependencies": {
-    "tslib": "2.3.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
     "@fluentui/react": "^8.106.4",
-    "@microsoft/sp-core-library": "1.21.1",
+    "@microsoft/mgt-element": "^4.6.0",
+    "@microsoft/mgt-react": "^4.6.0",
     "@microsoft/sp-component-base": "1.21.1",
+    "@microsoft/sp-core-library": "1.21.1",
+    "@microsoft/sp-lodash-subset": "1.21.1",
+    "@microsoft/sp-office-ui-fabric-core": "1.21.1",
     "@microsoft/sp-property-pane": "1.21.1",
     "@microsoft/sp-webpart-base": "1.21.1",
-    "@microsoft/sp-lodash-subset": "1.21.1",
-    "@microsoft/sp-office-ui-fabric-core": "1.21.1"
+    "@pnp/modern-search-extensibility": "^1.5.0",
+    "@pnp/spfx-controls-react": "^3.22.0",
+    "@pnp/spfx-property-controls": "^3.21.0",
+    "@pnp/telemetry-js": "^2.0.0",
+    "handlebars": "^4.7.8",
+    "handlebars-group-by": "^1.0.1",
+    "handlebars-helpers": "^0.10.0",
+    "immutability-helper": "^3.1.1",
+    "isomorphic-dompurify": "^2.26.0",
+    "react": "17.0.1",
+    "react-ace": "^14.0.1",
+    "react-dom": "17.0.1",
+    "react-js-pagination": "^3.0.3",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-5.3": "0.1.0",
-    "@rushstack/eslint-config": "4.0.1",
-    "@microsoft/eslint-plugin-spfx": "1.21.1",
     "@microsoft/eslint-config-spfx": "1.21.1",
+    "@microsoft/eslint-plugin-spfx": "1.21.1",
+    "@microsoft/rush-stack-compiler-5.3": "0.1.0",
     "@microsoft/sp-build-web": "1.21.1",
+    "@microsoft/sp-module-interfaces": "1.21.1",
+    "@rushstack/eslint-config": "4.0.1",
+    "@types/react": "17.0.45",
+    "@types/react-dom": "17.0.17",
     "@types/webpack-env": "~1.15.2",
     "ajv": "^6.12.5",
     "eslint": "8.57.1",
-    "gulp": "4.0.2",
-    "typescript": "~5.3.3",
-    "@types/react": "17.0.45",
-    "@types/react-dom": "17.0.17",
     "eslint-plugin-react-hooks": "4.3.0",
-    "@microsoft/sp-module-interfaces": "1.21.1"
+    "gulp": "4.0.2",
+    "typescript": "~5.3.3"
   }
 }
