--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "skipLibCheck": true,
     "outDir": "lib",
     "inlineSources": false,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "strict": false,
 
     "typeRoots": [
       "./node_modules/@types",
@@ -24,9 +26,17 @@
     "lib": [
       "es5",
       "dom",
+      "es2015",
       "es2015.collection",
-      "es2015.promise"
+      "es2015.promise",
+      "es2016",
+      "es2017"
     ]
+    ,
+    "baseUrl": "./src",
+    "paths": {
+      
+    }
   },
   "include": [
     "src/**/*.ts",
