--- a/src/webparts/spfxBannerSearch/SpfxBannerSearchWebPart.manifest.json
+++ b/src/webparts/spfxBannerSearch/SpfxBannerSearchWebPart.manifest.json
@@ -3,23 +3,17 @@
   "id": "7a185dee-0f93-44f0-92da-8d3f06b9adff",
   "alias": "SpfxBannerSearchWebPart",
   "componentType": "WebPart",
-
-  // The "*" signifies that the version should be taken from the package.json
   "version": "*",
   "manifestVersion": 2,
-
-  // If true, the component can only be installed on sites where Custom Script is allowed.
-  // Components that allow authors to embed arbitrary script code should set this to true.
-  // https://support.office.com/en-us/article/Turn-scripting-capabilities-on-or-off-1f2c515f-5d7e-448a-9fd7-835da935584f
   "requiresCustomScript": false,
   "supportedHosts": ["SharePointWebPart", "TeamsPersonalApp", "TeamsTab", "SharePointFullPage"],
   "supportsThemeVariants": true,
   "supportsFullBleed": true,
 
   "preconfiguredEntries": [{
-    "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
+    "groupId": "5c03119e-3074-46fd-976b-c60198311f70", 
     "group": { "default": "Advanced" },
-    "title": { "default": "AI Search Hero Banner" },
+    "title": { "default": "Monarch AI Search" },
     "description": { "default": "Full-bleed hero banner with centralized search and configurable gradients" },
     "officeFabricIconFontName": "SearchAndApps",
     "properties": {
